# iSSB

./: .gitignore  .gitmodules  Credits.csv  Info.plist  Loader.cpp  README.md  SmashBros.vcxproj  SmashBros.vcxproj.filters  animation checklist.txt  com.brokenphysics.iSSB.prefs
Projects/AndroidStudio/: build.gradle  settings.gradle
Projects/AndroidStudio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Projects/Codelite/: Makefile  iSSB.mk  iSSB.project  iSSB.txt  iSSB.workspace
Projects/VisualStudio/: .gitignore  iSSB.sln  iSSB.vcxproj  iSSB.vcxproj.filters  nuget.config  packages.config
SmashBros/: ActorGrid.cpp  ActorGrid.h  Arrows.cpp  Arrows.h  AttackManager.cpp  AttackManager.h  AttackRandomizer.cpp  AttackRandomizer.h  AttackTemplates.cpp  AttackTemplates.h  BattlefieldBrawl.cpp  BattlefieldBrawl.h  BeamSword.cpp  BeamSword.h  Camera.cpp  Camera.h  CharSelectScreen.cpp  CharSelectScreen.h  Chargebar.cpp  Chargebar.h  CollisionManager.cpp  CollisionManager.h  Controls.cpp  Controls.h  FinalDestinationBrawl.cpp  FinalDestinationBrawl.h  Fox.cpp  Fox.h  FractalStage.cpp  FractalStage.h  Game.cpp  Game.h  GameElement.cpp  GameElement.h  GameScreen.cpp  GameScreen.h  Global.cpp  Global.h  HUD.cpp  HUD.h  (+70 more)
SmashBros.xcodeproj/: luis.mode1v3  luis.pbxuser  project.pbxproj
SmashBros.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SmashBros/GameEngine/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  Application.cpp  Application.h  ArrayList.h  AssetManager.cpp  AssetManager.h  BatchLoader.h  Bitset.h  BufferedImage.cpp  BufferedImage.h  CPPBridge.cpp  CPPBridge.h  Color.h  Console.cpp  Console.h  Font.cpp  GameEngine.h  GlobalDefs.h  Graphics2D.cpp  Graphics2D.h  Image.h  Keys.cpp  Keys.h  MenuScreen.cpp  MenuScreen.h  MessageBoxDelegate.mm  Music.cpp  Music.h  ObjCBridge.h  P2PManager.cpp  P2PManager.h  PixelIterator.cpp  PixelIterator.h  PrefManager.cpp  PrefManager.h  (+20 more)
Source/: Game.cpp  Game.h  Program.cpp  Program.mm
Source/GameEngine/: Application.cpp  Application.h  ApplicationEventListener.cpp  ApplicationEventListener.h  AssetManager.cpp  AssetManager.h  BatchLoader.cpp  BatchLoader.h  GameEngine.cpp  GameEngine.h  GlobalDefs.h  View.cpp  View.h
Source/ScriptModule/: ScriptEntity.cpp  ScriptEntity.h  ScriptMacros.h  ScriptManager.cpp  ScriptManager.h  ScriptOperatorOverloads.cpp  ScriptOperatorOverloads.h
Source/SmashBros/: AttackManager.cpp  AttackManager.h  AttackRandomizer.cpp  AttackRandomizer.h  AttackTemplates.cpp  AttackTemplates.h  Camera.cpp  Camera.h  Chargebar.cpp  Chargebar.h  CollisionManager.cpp  CollisionManager.h  Controls.cpp  Controls.h  Game.cpp  Game.h  GameElement.cpp  GameElement.h  Global.cpp  Global.h  HUD.cpp  HUD.h  Item.h  (+27 more)
(+228 files in other folders)
